<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:src="@drawable/logo"
        android:contentDescription='Logo aplicación'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundBlack"></ImageView>

    <LinearLayout
        android:id="@+id/splashtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenido"
            android:textColor="#fff"
            android:textSize="34sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      Vinilos"
            android:textColor="#fff"
            android:textSize="26sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:elevation="6dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vinilos"
            android:textColor="#fff"
            android:textSize="31sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Explorar el mundo a través de tus oidos."
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="italic"></TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/backgroundBlack"
        android:layout_width="620dp"
        android:layout_height="710dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription='Fondo aplicación'
        app:layout_constraintTop_toTopOf="parent" />
<!--Menu-->
    <LinearLayout
        android:id="@+id/menu"
        android:elevation="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        android:layout_marginTop="400dp">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/albumes"
                    android:layout_width="130dp"
                    android:layout_height="183dp"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/album"
                    android:contentDescription='Enlace a los Albumes'></ImageButton>

                <Button
                    android:id="@+id/albumes2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Albumes"
                    android:textSize="10sp"
                    android:layout_marginTop="138dp"
                    android:textColor="#ffffff"
                    android:contentDescription='Redirije a los Albumes'></Button>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageButton
                    android:id="@+id/artistas"
                    android:layout_width="130dp"
                    android:layout_height="183dp"
                    android:src="@drawable/artista"
                    android:contentDescription='Enlace a los Artistas'></ImageButton>

                <Button
                    android:id="@+id/artistas2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artistas"
                    android:textSize="10sp"
                    android:layout_marginTop="138dp"
                    android:textColor="#ffffff"
                    android:contentDescription='Redirije a los Artistas'></Button>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton

                    android:id="@+id/imgButtoncoleccionista"
                    android:layout_width="140dp"
                    android:layout_height="183dp"
                    android:src="@drawable/coleccionista"
                    android:contentDescription='Enlace a los Coleccionistas'></ImageButton>
                <Button
                    android:id="@+id/btnColeccionistas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coleccionista"
                    android:textSize="10sp"
                    android:layout_marginTop="138dp"
                    android:textColor="#ffffff"
                    android:contentDescription='Redirije a los Coleccionistas'></Button>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>